@@ -1,7 +1,7 @@
 package com.depromeet.threedollar.api.controller.faq;
 
+import com.depromeet.threedollar.api.controller.SetupUserControllerTest;
 import com.depromeet.threedollar.application.common.dto.ApiResponse;
-import com.depromeet.threedollar.api.controller.AbstractControllerTest;
 import com.depromeet.threedollar.application.mapper.faq.dto.response.FaqCategoryResponse;
 import com.depromeet.threedollar.application.service.faq.dto.response.FaqResponse;
 import com.depromeet.threedollar.domain.domain.faq.Faq;
@@ -11,23 +11,21 @@ import com.depromeet.threedollar.domain.domain.faq.FaqRepository;
 import org.junit.jupiter.api.*;
 import org.springframework.beans.factory.annotation.Autowired;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-class FaqControllerTest extends AbstractControllerTest {
+class FaqControllerTest extends SetupUserControllerTest {
 
     private FaqMockApiCaller faqMockApiCaller;
 
-    @Autowired
-    private FaqRepository faqRepository;
-
     @BeforeEach
-    void setUp() throws Exception {
-        super.setup();
+    void setUp() {
         faqMockApiCaller = new FaqMockApiCaller(mockMvc, objectMapper);
     }
+
+    @Autowired
+    private FaqRepository faqRepository;
 
     @AfterEach
     void cleanUp() {
@@ -37,14 +35,14 @@ class FaqControllerTest extends AbstractControllerTest {
 
     @DisplayName("GET /api/v2/faqs")
     @Nested
-    class FAQ_조회 {
+    class FAQ_전체_조회 {
 
         @Test
-        void FAQ_리스트를_조회한다() throws Exception {
+        void FAQ_전체_리스트를_조회한다() throws Exception {
             // given
             Faq faq1 = FaqCreator.create("question1", "answer1", FaqCategory.CATEGORY);
             Faq faq2 = FaqCreator.create("question2", "answer2", FaqCategory.BOARD);
-            faqRepository.saveAll(Arrays.asList(faq1, faq2));
+            faqRepository.saveAll(List.of(faq1, faq2));
 
             // when
             ApiResponse<List<FaqResponse>> response = faqMockApiCaller.retrieveAllFaqs(200);
@@ -66,7 +64,7 @@ class FaqControllerTest extends AbstractControllerTest {
             // given
             Faq faq1 = FaqCreator.create("question1", "answer1", FaqCategory.CATEGORY);
             Faq faq2 = FaqCreator.create("question2", "answer2", FaqCategory.BOARD);
-            faqRepository.saveAll(Arrays.asList(faq1, faq2));
+            faqRepository.saveAll(List.of(faq1, faq2));
 
             // when
             ApiResponse<List<FaqResponse>> response = faqMockApiCaller.retrieveAllFaqs(FaqCategory.CATEGORY, 200);
