@@ -1,6 +1,6 @@
 package com.depromeet.threedollar.api.service.store;
 
-import com.depromeet.threedollar.api.service.UserSetUpTest;
+import com.depromeet.threedollar.api.service.SetupUserServiceTest;
 import com.depromeet.threedollar.api.service.store.dto.request.AddStoreRequest;
 import com.depromeet.threedollar.api.service.store.dto.request.DeleteStoreRequest;
 import com.depromeet.threedollar.api.service.store.dto.request.MenuRequest;
@@ -19,25 +19,23 @@ import com.depromeet.threedollar.domain.domain.storedelete.DeleteReasonType;
 import com.depromeet.threedollar.domain.domain.storedelete.StoreDeleteRequest;
 import com.depromeet.threedollar.domain.domain.storedelete.StoreDeleteRequestCreator;
 import com.depromeet.threedollar.domain.domain.storedelete.StoreDeleteRequestRepository;
+import org.javaunit.autoparams.AutoSource;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
 import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 
 import java.util.*;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 @SpringBootTest
-class StoreServiceTest extends UserSetUpTest {
+class StoreServiceTest extends SetupUserServiceTest {
 
     @Autowired
     private StoreService storeService;
@@ -70,30 +68,21 @@ class StoreServiceTest extends UserSetUpTest {
     @Nested
     class 가게_정보_등록 {
 
-        @Test
-        void 성공시_새로운_가게_데이터가_DB에_추가된다() {
+        @AutoSource
+        @ParameterizedTest
+        void 새로운_가게를_등록하면_새로운_가게_데이터가_추가된다(String storeName, StoreType storeType) {
             // given
             double latitude = 34.0;
             double longitude = 130.0;
-
-            String storeName = "붕어빵";
-            StoreType storeType = StoreType.STORE;
-            Set<DayOfTheWeek> appearanceDays = Set.of(DayOfTheWeek.TUESDAY);
-            Set<PaymentMethodType> paymentMethods = Set.of(PaymentMethodType.CARD);
-
-            String menuName = "메뉴 이름";
-            String price = "10000";
-            MenuCategoryType type = MenuCategoryType.BUNGEOPPANG;
-            Set<MenuRequest> menu = Set.of(MenuRequest.of(menuName, price, type));
 
             AddStoreRequest request = AddStoreRequest.testBuilder()
                 .latitude(latitude)
                 .longitude(longitude)
                 .storeName(storeName)
                 .storeType(storeType)
-                .appearanceDays(appearanceDays)
-                .paymentMethods(paymentMethods)
-                .menus(menu)
+                .appearanceDays(Set.of(DayOfTheWeek.FRIDAY))
+                .paymentMethods(Set.of(PaymentMethodType.CARD))
+                .menus(Set.of(MenuRequest.of("메뉴 이름", "한 개에 만원", MenuCategoryType.BUNGEOPPANG)))
                 .build();
 
             // when
@@ -105,11 +94,10 @@ class StoreServiceTest extends UserSetUpTest {
             assertStore(stores.get(0), latitude, longitude, storeName, storeType, userId);
         }
 
-        @Test
-        void 성공시_게시일_테이블에_새로운_게시일_정보도_추가된다() {
+        @AutoSource
+        @ParameterizedTest
+        void 가게_등록시_개장일_데이터도_추가된다(Set<DayOfTheWeek> appearanceDays) {
             // given
-            Set<DayOfTheWeek> appearanceDays = Set.of(DayOfTheWeek.TUESDAY, DayOfTheWeek.WEDNESDAY);
-
             AddStoreRequest request = AddStoreRequest.testBuilder()
                 .latitude(34.0)
                 .longitude(130.0)
@@ -125,15 +113,14 @@ class StoreServiceTest extends UserSetUpTest {
 
             // then
             List<AppearanceDay> appearanceDayList = appearanceDayRepository.findAll();
-            assertThat(appearanceDayList).hasSize(2);
-            assertThat(getDayOfTheWeeks(appearanceDayList)).containsAll(Arrays.asList(DayOfTheWeek.TUESDAY, DayOfTheWeek.WEDNESDAY));
+            assertThat(appearanceDayList).hasSize(appearanceDays.size());
+            assertThat(getDayOfTheWeeks(appearanceDayList)).containsExactlyInAnyOrderElementsOf(appearanceDays);
         }
 
-        @Test
-        void 성공시_결제방법_테이블에_결제_방법도_추가된다() {
+        @AutoSource
+        @ParameterizedTest
+        void 가게_등록시_결제방법_데이터도_추가된다(Set<PaymentMethodType> paymentMethods) {
             // given
-            Set<PaymentMethodType> paymentMethods = Set.of(PaymentMethodType.CARD, PaymentMethodType.CASH);
-
             AddStoreRequest request = AddStoreRequest.testBuilder()
                 .latitude(34.0)
                 .longitude(130.0)
@@ -149,16 +136,14 @@ class StoreServiceTest extends UserSetUpTest {
 
             // then
             List<PaymentMethod> paymentMethodsList = paymentMethodRepository.findAll();
-            assertThat(paymentMethodsList).hasSize(2);
-            assertThat(getPaymentMethodTypes(paymentMethodsList)).containsAll(Arrays.asList(PaymentMethodType.CARD, PaymentMethodType.CASH));
+            assertThat(paymentMethodsList).hasSize(paymentMethods.size());
+            assertThat(getPaymentMethodTypes(paymentMethodsList)).containsExactlyInAnyOrderElementsOf(paymentMethods);
         }
 
-        @Test
-        void 성공시_메뉴_테이블에_메뉴들도_함께_추가된다() {
+        @AutoSource
+        @ParameterizedTest
+        void 가게_등록시_메뉴_데이터도_추가된다(String menuName, String price, MenuCategoryType type) {
             // given
-            String menuName = "메뉴 이름";
-            String price = "10000";
-            MenuCategoryType type = MenuCategoryType.BUNGEOPPANG;
             Set<MenuRequest> menus = Set.of(MenuRequest.of(menuName, price, type));
 
             AddStoreRequest request = AddStoreRequest.testBuilder()
@@ -180,13 +165,11 @@ class StoreServiceTest extends UserSetUpTest {
             assertMenu(menuList.get(0), menuName, price, type);
         }
 
-        @Test
-        void 가게_추가시_중복된_메뉴는_저장되지_않는다() {
+        @AutoSource
+        @ParameterizedTest
+        void 가게_등록시_중복된_메뉴는_한개만_저장된다(String menuName, String price, MenuCategoryType type) {
             // given
-            String menuName = "메뉴 이름";
-            String price = "10000";
-            MenuCategoryType type = MenuCategoryType.BUNGEOPPANG;
-            Set<MenuRequest> menus = new HashSet<>(Arrays.asList(
+            Set<MenuRequest> menus = new HashSet<>(List.of(
                 MenuRequest.of(menuName, price, type),
                 MenuRequest.of(menuName, price, type))
             );
@@ -216,24 +199,16 @@ class StoreServiceTest extends UserSetUpTest {
     @TestInstance(TestInstance.Lifecycle.PER_CLASS)
     class 가게_정보_수정 {
 
-        @Test
-        void 성공시_기존_가게정보_데이터들이_수정된다() {
+        @AutoSource
+        @ParameterizedTest
+        void 가게_정보를_수정하면_해당_가게_데이터가_수정된다(String storeName, StoreType storeType, Set<DayOfTheWeek> appearanceDays, Set<PaymentMethodType> paymentMethods) {
             // given
             Store store = StoreCreator.create(userId, "storeName");
-            store.addMenus(Collections.singletonList(MenuCreator.create(store, "붕어빵", "만원", MenuCategoryType.BUNGEOPPANG)));
+            store.addMenus(List.of(MenuCreator.create(store, "붕어빵", "만원", MenuCategoryType.BUNGEOPPANG)));
             storeRepository.save(store);
 
             double latitude = 34.0;
             double longitude = 130.0;
-            String storeName = "붕어빵";
-            StoreType storeType = StoreType.STORE;
-            Set<DayOfTheWeek> appearanceDays = Set.of(DayOfTheWeek.TUESDAY);
-            Set<PaymentMethodType> paymentMethods = Set.of(PaymentMethodType.CARD);
-
-            String menuName = "메뉴 이름";
-            String price = "10000";
-            MenuCategoryType type = MenuCategoryType.BUNGEOPPANG;
-            Set<MenuRequest> menu = Set.of(MenuRequest.of(menuName, price, type));
 
             UpdateStoreRequest request = UpdateStoreRequest.testBuilder()
                 .latitude(latitude)
@@ -242,11 +217,11 @@ class StoreServiceTest extends UserSetUpTest {
                 .storeType(storeType)
                 .appearanceDays(appearanceDays)
                 .paymentMethods(paymentMethods)
-                .menus(menu)
+                .menus(Set.of(MenuRequest.of("메뉴 이름", "가격", MenuCategoryType.BUNGEOPPANG)))
                 .build();
 
             // when
-            storeService.updateStore(store.getId(), request, userId);
+            storeService.updateStore(store.getId(), request);
 
             // then
             List<Store> stores = storeRepository.findAll();
@@ -254,74 +229,55 @@ class StoreServiceTest extends UserSetUpTest {
             assertStore(stores.get(0), latitude, longitude, storeName, storeType, userId);
 
             List<AppearanceDay> appearanceDayList = appearanceDayRepository.findAll();
-            assertThat(appearanceDayList).hasSize(1);
-            assertAppearanceDay(appearanceDayList.get(0), DayOfTheWeek.TUESDAY, stores.get(0).getId());
+            assertThat(appearanceDayList).hasSize(appearanceDays.size());
+            assertThat(getDayOfTheWeeks(appearanceDayList)).containsExactlyInAnyOrderElementsOf(appearanceDays);
 
             List<PaymentMethod> paymentMethodsList = paymentMethodRepository.findAll();
-            assertThat(paymentMethodsList).hasSize(1);
-            assertPaymentMethod(paymentMethodsList.get(0), PaymentMethodType.CARD, stores.get(0).getId());
-
-            List<Menu> menus = menuRepository.findAll();
-            assertThat(menus).hasSize(1);
-            assertMenu(menus.get(0), menuName, price, type);
+            assertThat(paymentMethodsList).hasSize(paymentMethods.size());
+            assertThat(getPaymentMethodTypes(paymentMethodsList)).containsExactlyInAnyOrderElementsOf(paymentMethods);
         }
 
-        @Test
-        void 사용자가_작성하지_않은_가게_정보도_수정할수있다_단_최초제보자가_가게_제보자로_유지된다() {
+        @AutoSource
+        @ParameterizedTest
+        void 가게의_기본_정보를_수정한다(String menuName, String price, MenuCategoryType type) {
             // given
-            Store store = StoreCreator.create(100L, "storeName");
-            store.addMenus(Collections.singletonList(MenuCreator.create(store, "붕어빵", "만원", MenuCategoryType.BUNGEOPPANG)));
+            Store store = StoreCreator.create(userId, "storeName");
+            store.addMenus(List.of(MenuCreator.create(store, "붕어빵", "만원", MenuCategoryType.BUNGEOPPANG)));
             storeRepository.save(store);
 
             double latitude = 34.0;
             double longitude = 130.0;
-            String storeName = "붕어빵";
-            StoreType storeType = StoreType.STORE;
-            Set<DayOfTheWeek> appearanceDays = Set.of(DayOfTheWeek.TUESDAY);
-            Set<PaymentMethodType> paymentMethods = Set.of(PaymentMethodType.CARD);
 
-            String menuName = "메뉴 이름";
-            String price = "10000";
-            MenuCategoryType type = MenuCategoryType.BUNGEOPPANG;
             Set<MenuRequest> menu = Set.of(MenuRequest.of(menuName, price, type));
 
             UpdateStoreRequest request = UpdateStoreRequest.testBuilder()
                 .latitude(latitude)
                 .longitude(longitude)
-                .storeName(storeName)
-                .storeType(storeType)
-                .appearanceDays(appearanceDays)
-                .paymentMethods(paymentMethods)
+                .storeName("가게 이름")
+                .storeType(StoreType.STORE)
+                .appearanceDays(Set.of(DayOfTheWeek.FRIDAY))
+                .paymentMethods(Set.of(PaymentMethodType.CARD))
                 .menus(menu)
                 .build();
 
             // when
-            storeService.updateStore(store.getId(), request, userId);
+            storeService.updateStore(store.getId(), request);
 
             // then
             List<Store> stores = storeRepository.findAll();
             assertThat(stores).hasSize(1);
-            assertStore(stores.get(0), latitude, longitude, storeName, storeType, 100L);
-
-            List<AppearanceDay> appearanceDayList = appearanceDayRepository.findAll();
-            assertThat(appearanceDayList).hasSize(1);
-            assertAppearanceDay(appearanceDayList.get(0), DayOfTheWeek.TUESDAY, stores.get(0).getId());
-
-            List<PaymentMethod> paymentMethodsList = paymentMethodRepository.findAll();
-            assertThat(paymentMethodsList).hasSize(1);
-            assertPaymentMethod(paymentMethodsList.get(0), PaymentMethodType.CARD, stores.get(0).getId());
 
             List<Menu> menus = menuRepository.findAll();
             assertThat(menus).hasSize(1);
             assertMenu(menus.get(0), menuName, price, type);
         }
 
-        @MethodSource
+        @AutoSource
         @ParameterizedTest
         void 가게의_결제방법을_수정한다(Set<PaymentMethodType> paymentMethodTypes) {
             // given
             Store store = StoreCreator.create(userId, "storeName");
-            store.addMenus(Collections.singletonList(MenuCreator.create(store, "붕어빵", "만원", MenuCategoryType.BUNGEOPPANG)));
+            store.addMenus(List.of(MenuCreator.create(store, "붕어빵", "만원", MenuCategoryType.BUNGEOPPANG)));
             store.addPaymentMethods(Set.of(PaymentMethodType.CARD));
             storeRepository.save(store);
 
@@ -336,28 +292,20 @@ class StoreServiceTest extends UserSetUpTest {
                 .build();
 
             // when
-            storeService.updateStore(store.getId(), request, userId);
+            storeService.updateStore(store.getId(), request);
 
             // then
             List<PaymentMethod> paymentMethodsList = paymentMethodRepository.findAll();
             assertThat(paymentMethodsList).hasSize(paymentMethodTypes.size());
-            assertThat(getPaymentMethodTypes(paymentMethodsList)).containsAll(paymentMethodTypes);
+            assertThat(getPaymentMethodTypes(paymentMethodsList)).containsExactlyInAnyOrderElementsOf(paymentMethodTypes);
         }
 
-        private Stream<Arguments> 가게의_결제방법을_수정한다() {
-            return Stream.of(
-                Arguments.of(Set.of(PaymentMethodType.CARD, PaymentMethodType.CASH)), // 거래 방식을 추가하는 경우.
-                Arguments.of(Collections.emptySet()), // 거래 방식을 없애는 경우
-                Arguments.of(Set.of(PaymentMethodType.CARD)) // 유지하는 경우
-            );
-        }
-
-        @MethodSource
+        @AutoSource
         @ParameterizedTest
         void 가게의_개시일을_수정한다(Set<DayOfTheWeek> appearanceDays) {
             // given
             Store store = StoreCreator.create(userId, "storeName");
-            store.addMenus(Collections.singletonList(MenuCreator.create(store, "붕어빵", "만원", MenuCategoryType.BUNGEOPPANG)));
+            store.addMenus(List.of(MenuCreator.create(store, "붕어빵", "만원", MenuCategoryType.BUNGEOPPANG)));
             store.addAppearanceDays(Set.of(DayOfTheWeek.TUESDAY, DayOfTheWeek.WEDNESDAY));
             storeRepository.save(store);
 
@@ -372,64 +320,23 @@ class StoreServiceTest extends UserSetUpTest {
                 .build();
 
             // when
-            storeService.updateStore(store.getId(), request, userId);
+            storeService.updateStore(store.getId(), request);
 
             // then
             List<AppearanceDay> appearanceDayList = appearanceDayRepository.findAll();
             assertThat(appearanceDayList).hasSize(appearanceDays.size());
-            assertThat(getDayOfTheWeeks(appearanceDayList)).containsAll(appearanceDays);
+            assertThat(getDayOfTheWeeks(appearanceDayList)).containsExactlyInAnyOrderElementsOf(appearanceDays);
         }
 
-        private Stream<Arguments> 가게의_개시일을_수정한다() {
-            return Stream.of(
-                Arguments.of(Set.of(DayOfTheWeek.MONDAY, DayOfTheWeek.TUESDAY, DayOfTheWeek.WEDNESDAY)), // 거래 방식을 추가하는 경우.
-                Arguments.of(Set.of(DayOfTheWeek.TUESDAY)), // 거래 방식을 없애는 경우
-                Arguments.of(Set.of(DayOfTheWeek.WEDNESDAY, DayOfTheWeek.TUESDAY)) // 유지하는 경우
-            );
-        }
-
-        @Test
-        void 가게의_메뉴를_수정한다() {
+        @AutoSource
+        @ParameterizedTest
+        void 가게_메뉴_수정시_중복된_메뉴는_한개만_저장된다(String menuName, String price, MenuCategoryType type) {
             // given
             Store store = StoreCreator.create(userId, "storeName");
-            store.addMenus(Collections.singletonList(Menu.of(store, "이름", "가격", MenuCategoryType.BUNGEOPPANG)));
+            store.addMenus(List.of(Menu.of(store, "이름", "가격", MenuCategoryType.BUNGEOPPANG)));
             storeRepository.save(store);
 
-            String menuName = "메뉴 이름";
-            String price = "10000";
-            MenuCategoryType type = MenuCategoryType.BUNGEOPPANG;
-            Set<MenuRequest> menus = Set.of(MenuRequest.of(menuName, price, type));
-
-            UpdateStoreRequest request = UpdateStoreRequest.testBuilder()
-                .latitude(34.0)
-                .longitude(130.0)
-                .storeName("붕어빵")
-                .storeType(StoreType.STORE)
-                .appearanceDays(Collections.emptySet())
-                .paymentMethods(Collections.emptySet())
-                .menus(menus)
-                .build();
-
-            // when
-            storeService.updateStore(store.getId(), request, userId);
-
-            // then
-            List<Menu> findMenus = menuRepository.findAll();
-            assertThat(findMenus).hasSize(1);
-            assertMenu(findMenus.get(0), store.getId(), menuName, price, type);
-        }
-
-        @Test
-        void 가게의_메뉴를_수정할때_중복된_메뉴는_저장되지_않는다() {
-            // given
-            Store store = StoreCreator.create(userId, "storeName");
-            store.addMenus(Collections.singletonList(Menu.of(store, "이름", "가격", MenuCategoryType.BUNGEOPPANG)));
-            storeRepository.save(store);
-
-            String menuName = "메뉴 이름";
-            String price = "10000";
-            MenuCategoryType type = MenuCategoryType.BUNGEOPPANG;
-            Set<MenuRequest> menus = new HashSet<>(Arrays.asList(
+            Set<MenuRequest> menus = new HashSet<>(List.of(
                 MenuRequest.of(menuName, price, type),
                 MenuRequest.of(menuName, price, type))
             );
@@ -445,7 +352,7 @@ class StoreServiceTest extends UserSetUpTest {
                 .build();
 
             // when
-            storeService.updateStore(store.getId(), request, userId);
+            storeService.updateStore(store.getId(), request);
 
             // then
             List<Menu> findMenus = menuRepository.findAll();
@@ -454,8 +361,10 @@ class StoreServiceTest extends UserSetUpTest {
         }
 
         @Test
-        void 해당하는_가게가_존재하지_않으면_NOT_FOUND_STORE_EXCEPTION() {
+        void 존재하지_않는_가게를_수정시_NOT_FOUND_STORE_EXCEPTION() {
             // given
+            Long notFoundStoreId = -1L;
+
             UpdateStoreRequest request = UpdateStoreRequest.testBuilder()
                 .latitude(34.0)
                 .longitude(130.0)
@@ -467,7 +376,40 @@ class StoreServiceTest extends UserSetUpTest {
                 .build();
 
             // when & then
-            assertThatThrownBy(() -> storeService.updateStore(999L, request, userId)).isInstanceOf(NotFoundException.class);
+            assertThatThrownBy(() -> storeService.updateStore(notFoundStoreId, request)).isInstanceOf(NotFoundException.class);
+        }
+
+        @Test
+        void 내가_등록하지_않은_가게도_수정할수있다_단_제보자는_최초_제보자로_유지된다() {
+            // given
+            Long creatorUserId = 100L;
+
+            Store store = StoreCreator.create(creatorUserId, "storeName");
+            store.addMenus(List.of(MenuCreator.create(store, "붕어빵", "만원", MenuCategoryType.BUNGEOPPANG)));
+            storeRepository.save(store);
+
+            double latitude = 34.0;
+            double longitude = 130.0;
+            String storeName = "붕어빵";
+            StoreType storeType = StoreType.STORE;
+
+            UpdateStoreRequest request = UpdateStoreRequest.testBuilder()
+                .latitude(latitude)
+                .longitude(longitude)
+                .storeName(storeName)
+                .storeType(storeType)
+                .appearanceDays(Set.of(DayOfTheWeek.FRIDAY))
+                .paymentMethods(Set.of(PaymentMethodType.CARD))
+                .menus(Set.of(MenuRequest.of("메뉴 이름", "가격", MenuCategoryType.BUNGEOPPANG)))
+                .build();
+
+            // when
+            storeService.updateStore(store.getId(), request);
+
+            // then
+            List<Store> stores = storeRepository.findAll();
+            assertThat(stores).hasSize(1);
+            assertStore(stores.get(0), latitude, longitude, storeName, storeType, creatorUserId);
         }
 
     }
@@ -475,27 +417,31 @@ class StoreServiceTest extends UserSetUpTest {
     @Nested
     class 가게_삭제_요청 {
 
-        @Test
-        void 삭제_요청이_1개_쌓이면_실제로_가게정보가_삭제되지_않는다() {
+        @AutoSource
+        @ParameterizedTest
+        void 삭제_요청이_1개_쌓이면_실제로_가게정보가_삭제되지_않는다(DeleteReasonType deleteReasonType) {
             // given
             Store store = StoreCreator.create(userId, "storeName");
             storeRepository.save(store);
 
-            DeleteReasonType type = DeleteReasonType.NOSTORE;
-
             // when
-            StoreDeleteResponse response = storeService.deleteStore(store.getId(), DeleteStoreRequest.testInstance(DeleteReasonType.NOSTORE), userId);
+            StoreDeleteResponse response = storeService.deleteStore(store.getId(), DeleteStoreRequest.testInstance(deleteReasonType), userId);
 
             // then
+            List<Store> stores = storeRepository.findAll();
+            assertThat(stores).hasSize(1);
+            assertThat(stores.get(0).getStatus()).isEqualTo(StoreStatus.ACTIVE);
+
             List<StoreDeleteRequest> storeDeleteRequestList = storeDeleteRequestRepository.findAll();
             assertThat(storeDeleteRequestList).hasSize(1);
-            assertStoreDeleteRequest(storeDeleteRequestList.get(0), store.getId(), userId, type);
+            assertStoreDeleteRequest(storeDeleteRequestList.get(0), store.getId(), userId, deleteReasonType);
 
             assertThat(response.getIsDeleted()).isFalse();
         }
 
-        @Test
-        void 삭제_요청이_2개_쌓이면_실제로_가게정보가_삭제되지_않는다() {
+        @AutoSource
+        @ParameterizedTest
+        void 삭제_요청이_2개_쌓이면_실제로_가게정보가_삭제되지_않는다(DeleteReasonType deleteReasonType) {
             // given
             Store store = StoreCreator.create(userId, "storeName");
             storeRepository.save(store);
@@ -503,30 +449,35 @@ class StoreServiceTest extends UserSetUpTest {
             storeDeleteRequestRepository.save(StoreDeleteRequestCreator.create(store.getId(), 90L, DeleteReasonType.WRONG_CONTENT));
 
             // when
-            StoreDeleteResponse response = storeService.deleteStore(store.getId(), DeleteStoreRequest.testInstance(DeleteReasonType.NOSTORE), userId);
+            StoreDeleteResponse response = storeService.deleteStore(store.getId(), DeleteStoreRequest.testInstance(deleteReasonType), userId);
 
             // then
+            List<Store> stores = storeRepository.findAll();
+            assertThat(stores).hasSize(1);
+            assertThat(stores.get(0).getStatus()).isEqualTo(StoreStatus.ACTIVE);
+
             List<StoreDeleteRequest> storeDeleteRequestList = storeDeleteRequestRepository.findAll();
             assertThat(storeDeleteRequestList).hasSize(2);
             assertStoreDeleteRequest(storeDeleteRequestList.get(0), store.getId(), 90L, DeleteReasonType.WRONG_CONTENT);
-            assertStoreDeleteRequest(storeDeleteRequestList.get(1), store.getId(), userId, DeleteReasonType.NOSTORE);
+            assertStoreDeleteRequest(storeDeleteRequestList.get(1), store.getId(), userId, deleteReasonType);
 
             assertThat(response.getIsDeleted()).isFalse();
         }
 
-        @Test
-        void 삭제_요청이_3개_쌓이면_실제로_가게정보가_실제로_삭제된다() {
+        @AutoSource
+        @ParameterizedTest
+        void 삭제_요청이_3개_쌓이면_실제로_가게정보가_실제로_삭제된다(DeleteReasonType deleteReasonType) {
             // given
             Store store = StoreCreator.create(userId, "storeName");
             storeRepository.save(store);
 
-            storeDeleteRequestRepository.saveAll(Arrays.asList(
-                StoreDeleteRequestCreator.create(store.getId(), 90L, DeleteReasonType.NOSTORE),
-                StoreDeleteRequestCreator.create(store.getId(), 91L, DeleteReasonType.NOSTORE))
+            storeDeleteRequestRepository.saveAll(List.of(
+                StoreDeleteRequestCreator.create(store.getId(), 1000L, DeleteReasonType.NOSTORE),
+                StoreDeleteRequestCreator.create(store.getId(), 1001L, DeleteReasonType.NOSTORE))
             );
 
             // when
-            StoreDeleteResponse response = storeService.deleteStore(store.getId(), DeleteStoreRequest.testInstance(DeleteReasonType.NOSTORE), userId);
+            StoreDeleteResponse response = storeService.deleteStore(store.getId(), DeleteStoreRequest.testInstance(deleteReasonType), userId);
 
             // then
             List<Store> stores = storeRepository.findAll();
@@ -535,12 +486,16 @@ class StoreServiceTest extends UserSetUpTest {
 
             List<StoreDeleteRequest> storeDeleteRequestList = storeDeleteRequestRepository.findAll();
             assertThat(storeDeleteRequestList).hasSize(3);
+            assertStoreDeleteRequest(storeDeleteRequestList.get(0), store.getId(), 1000L, DeleteReasonType.NOSTORE);
+            assertStoreDeleteRequest(storeDeleteRequestList.get(1), store.getId(), 1001L, DeleteReasonType.NOSTORE);
+            assertStoreDeleteRequest(storeDeleteRequestList.get(2), store.getId(), userId, deleteReasonType);
 
             assertThat(response.getIsDeleted()).isTrue();
         }
 
-        @Test
-        void 해당_사용자가_해당하는_가게에_대해_이미_삭제요청_한경우_CONFLICT_EXCEPTION() {
+        @AutoSource
+        @ParameterizedTest
+        void 가게_삭제요청시_내가_이미_삭제요청한_가게인경우_CONFLICT_EXCEPTION(DeleteReasonType reasonType) {
             // given
             Store store = StoreCreator.create(userId, "storeName");
             storeRepository.save(store);
@@ -548,7 +503,7 @@ class StoreServiceTest extends UserSetUpTest {
             storeDeleteRequestRepository.save(StoreDeleteRequestCreator.create(store.getId(), userId, DeleteReasonType.NOSTORE));
 
             // when & then
-            assertThatThrownBy(() -> storeService.deleteStore(store.getId(), DeleteStoreRequest.testInstance(DeleteReasonType.NOSTORE), userId))
+            assertThatThrownBy(() -> storeService.deleteStore(store.getId(), DeleteStoreRequest.testInstance(reasonType), userId))
                 .isInstanceOf(ConflictException.class);
         }
 
@@ -583,16 +538,6 @@ class StoreServiceTest extends UserSetUpTest {
         assertThat(menu.getName()).isEqualTo(menuName);
         assertThat(menu.getPrice()).isEqualTo(price);
         assertThat(menu.getCategory()).isEqualTo(type);
-    }
-
-    private void assertPaymentMethod(PaymentMethod paymentMethod, PaymentMethodType type, Long storeId) {
-        assertThat(paymentMethod.getStore().getId()).isEqualTo(storeId);
-        assertThat(paymentMethod.getMethod()).isEqualTo(type);
-    }
-
-    private void assertAppearanceDay(AppearanceDay appearanceDay, DayOfTheWeek day, Long storeId) {
-        assertThat(appearanceDay.getStore().getId()).isEqualTo(storeId);
-        assertThat(appearanceDay.getDay()).isEqualTo(day);
     }
 
     private void assertStore(Store store, Double latitude, Double longitude, String storeName, StoreType storeType, Long userId) {
