@@ -3,18 +3,18 @@ package com.depromeet.threedollar.api.service.user;
 import com.depromeet.threedollar.api.service.user.dto.request.CheckAvailableNameRequest;
 import com.depromeet.threedollar.api.service.user.dto.request.CreateUserRequest;
 import com.depromeet.threedollar.api.service.user.dto.request.UpdateUserInfoRequest;
+import com.depromeet.threedollar.common.exception.model.ConflictException;
 import com.depromeet.threedollar.common.exception.model.NotFoundException;
 import com.depromeet.threedollar.domain.domain.user.*;
-import com.depromeet.threedollar.common.exception.model.ConflictException;
+import org.javaunit.autoparams.AutoSource;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 
-import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -39,16 +39,13 @@ class UserServiceTest {
     }
 
     @Nested
-    class 회원가입 {
+    class 신규_유저_생성 {
 
-        @Test
-        void 성공시_새로운_유저정보가_추가된다() {
+        @AutoSource
+        @ParameterizedTest
+        void 새로운_유저가_회원가입하면_새로운_데이터가_추가된다(String socialId, UserSocialType socialType, String name) {
             // given
-            String socialId = "social-id";
-            UserSocialType type = UserSocialType.KAKAO;
-            String name = "가슴속 삼천원";
-
-            CreateUserRequest request = CreateUserRequest.testInstance(socialId, type, name);
+            CreateUserRequest request = CreateUserRequest.testInstance(socialId, socialType, name);
 
             // when
             userService.createUser(request);
@@ -56,13 +53,13 @@ class UserServiceTest {
             // then
             List<User> users = userRepository.findAll();
             assertThat(users).hasSize(1);
-            assertUserInfo(users.get(0), socialId, type, name);
+            assertUserInfo(users.get(0), socialId, socialType, name);
         }
 
-        @Test
-        void 중복된_닉네임이면_CONFLICT_EXCEPTION() {
+        @AutoSource
+        @ParameterizedTest
+        void 회원가입시_중복되는_닉네임인경우_Conflict_에러가_발생한다(String name) {
             // given
-            String name = "가슴속 삼천원";
             userRepository.save(UserCreator.create("social-id", UserSocialType.KAKAO, name));
 
             CreateUserRequest request = CreateUserRequest.testInstance("another-id", UserSocialType.APPLE, name);
@@ -71,35 +68,16 @@ class UserServiceTest {
             assertThatThrownBy(() -> userService.createUser(request)).isInstanceOf(ConflictException.class);
         }
 
-        @Test
-        void 중복된_소셜정보면_CONFLICT_EXCEPTION() {
+        @AutoSource
+        @ParameterizedTest
+        void 회원가입시_중복되는_소셜정보면_Conflict_에러가_발생한다(String socialId, UserSocialType socialType) {
             // given
-            String socialId = "social-id";
-            UserSocialType type = UserSocialType.KAKAO;
-            userRepository.save(UserCreator.create(socialId, type, "기존의 닉네임"));
+            userRepository.save(UserCreator.create(socialId, socialType, "기존의 닉네임"));
 
-            CreateUserRequest request = CreateUserRequest.testInstance(socialId, type, "새로운 닉네임");
+            CreateUserRequest request = CreateUserRequest.testInstance(socialId, socialType, "새로운 닉네임");
 
             // when & then
             assertThatThrownBy(() -> userService.createUser(request)).isInstanceOf(ConflictException.class);
-        }
-
-        @Test
-        void 소셜_아이디가_같더라도_제공하는_소셜이_다른경우_회원가입이_정상적으로_처리된다() {
-            // given
-            String socialId = "social-id";
-            userRepository.save(UserCreator.create(socialId, UserSocialType.APPLE, "기존의 닉네임"));
-
-            CreateUserRequest request = CreateUserRequest.testInstance(socialId, UserSocialType.KAKAO, "새로운 닉네임");
-
-            // when
-            userService.createUser(request);
-
-            // then
-            List<User> users = userRepository.findAll();
-            assertThat(users).hasSize(2);
-            assertUserInfo(users.get(0), socialId, UserSocialType.APPLE, "기존의 닉네임");
-            assertUserInfo(users.get(1), socialId, UserSocialType.KAKAO, "새로운 닉네임");
         }
 
     }
@@ -108,23 +86,23 @@ class UserServiceTest {
     class 회원_정보_조회 {
 
         @Test
-        void 존재하지_않는_유저면_NOT_FOUND_USER_EXCEPTION() {
+        void 존재하지_않는_유저을_회원_조회하면_NOT_FOUND_USER_EXCEPTION() {
             // given
-            Long userId = 999L;
+            Long notFoundUserId = -1L;
 
             // when & then
-            assertThatThrownBy(() -> userService.getUserInfo(userId)).isInstanceOf(NotFoundException.class);
+            assertThatThrownBy(() -> userService.getUserInfo(notFoundUserId)).isInstanceOf(NotFoundException.class);
         }
 
     }
 
     @Nested
-    class 사용가능한_닉네임_체크 {
+    class 중복된_닉네임_체크 {
 
-        @Test
-        void 중복된_닉네임이면_CONFLICT_EXCEPTION() {
+        @AutoSource
+        @ParameterizedTest
+        void 중복된_닉네임인경우_Conflcit_에러가_발생한다(String name) {
             // given
-            String name = "가슴속 삼천원";
             User user = UserCreator.create("social-id", UserSocialType.KAKAO, name);
             userRepository.save(user);
 
@@ -134,14 +112,13 @@ class UserServiceTest {
             assertThatThrownBy(() -> userService.checkAvailableName(request)).isInstanceOf(ConflictException.class);
         }
 
-        @Test
-        void 중복된_닉네임이_아니면_사용가능하다() {
+        @AutoSource
+        @ParameterizedTest
+        void 중복되지_않은_닉네임이면_통과한다(String name) {
             // given
-            String name = "가슴속 삼천원";
-
             CheckAvailableNameRequest request = CheckAvailableNameRequest.testInstance(name);
 
-            // when
+            // when & then
             userService.checkAvailableName(request);
         }
 
@@ -150,13 +127,11 @@ class UserServiceTest {
     @Nested
     class 회원정보_수정 {
 
-        @Test
-        void 성공시_해당하는_유저_정보가_변경된다() {
+        @AutoSource
+        @ParameterizedTest
+        void 나의_회원정보를_수정시_해당_회원의_데이터가_수정된다(String socialId, UserSocialType socialType, String name) {
             // given
-            String socialId = "social-id";
-            UserSocialType type = UserSocialType.KAKAO;
-            String name = "가슴속 삼천원";
-            User user = UserCreator.create(socialId, type, "기존의 닉네임");
+            User user = UserCreator.create(socialId, socialType, "기존의 닉네임");
             userRepository.save(user);
 
             UpdateUserInfoRequest request = UpdateUserInfoRequest.testInstance(name);
@@ -167,17 +142,17 @@ class UserServiceTest {
             // then
             List<User> users = userRepository.findAll();
             assertThat(users).hasSize(1);
-            assertUserInfo(users.get(0), socialId, type, name);
+            assertUserInfo(users.get(0), socialId, socialType, name);
         }
 
         @Test
-        void 존재하지_않는_유저면_NOT_FOUND_USER_EXCEPTION() {
+        void 존재하지_않는_유저의_회원정보_수정시_NotFound_에러가_발생한다() {
             // given
-            Long userId = 999L;
+            Long notFoundUserId = -1L;
             UpdateUserInfoRequest request = UpdateUserInfoRequest.testInstance("name");
 
             // when & then
-            assertThatThrownBy(() -> userService.updateUserInfo(request, userId)).isInstanceOf(NotFoundException.class);
+            assertThatThrownBy(() -> userService.updateUserInfo(request, notFoundUserId)).isInstanceOf(NotFoundException.class);
         }
 
     }
@@ -185,13 +160,14 @@ class UserServiceTest {
     @Nested
     class 회원탈퇴 {
 
-        @Test
-        void 성공시_백업을_위한_데이터가_생성된다() {
+        @AutoSource
+        @ParameterizedTest
+        void 회원탈퇴시_유저의_백업데이터가_생성된다(String socialId, UserSocialType socialType, String name) {
             // given
-            User user = UserCreator.create("social-id", UserSocialType.APPLE, "기존의 닉네임");
+            User user = UserCreator.create(socialId, socialType, name);
             userRepository.save(user);
 
-            // then
+            // when
             userService.signOut(user.getId());
 
             // then
@@ -200,20 +176,19 @@ class UserServiceTest {
 
             List<WithdrawalUser> withdrawalUsers = withdrawalUserRepository.findAll();
             assertThat(withdrawalUsers).hasSize(1);
-            assertWithdrawalUser(withdrawalUsers.get(0), user.getId(), user.getName(), user.getSocialId(), user.getSocialType(), user.getCreatedAt());
+            assertWithdrawalUser(withdrawalUsers.get(0), user);
         }
 
         @DisplayName("회원탈퇴시 다른 유저에게 영향을 주지 않는다")
         @Test
-        void 회원탈퇴한_유저만이_USER_테이블에서_삭제된다() {
+        void 회원탈퇴시_User테이블에서의_해당_데이터는_삭제된다() {
             // given
-            UserSocialType type = UserSocialType.APPLE;
-            User user1 = UserCreator.create("social-id1", type, "기존의 닉네임1");
+            User user1 = UserCreator.create("social-id1", UserSocialType.KAKAO, "기존의 닉네임1");
             User user2 = UserCreator.create("social-id2", UserSocialType.APPLE, "기존의 닉네임2");
 
-            userRepository.saveAll(Arrays.asList(user1, user2));
+            userRepository.saveAll(List.of(user1, user2));
 
-            // then
+            // when
             userService.signOut(user1.getId());
 
             // then
@@ -223,19 +198,21 @@ class UserServiceTest {
         }
 
         @Test
-        void 해당하는_유저가_없으면_NOT_FOUND_USER_EXCEPTION() {
+        void 존재하지_않는_유저를_회원탈퇴시_NotFound_에러가_발생한다() {
+            // given
+            Long notFoundUserId = -1L;
+
             // when & then
-            assertThatThrownBy(() -> userService.signOut(999L)).isInstanceOf(NotFoundException.class);
+            assertThatThrownBy(() -> userService.signOut(notFoundUserId)).isInstanceOf(NotFoundException.class);
         }
 
     }
 
-    private void assertWithdrawalUser(WithdrawalUser withdrawalUser, Long userId, String name, String socialId, UserSocialType socialType, LocalDateTime userCreatedAt) {
-        assertThat(withdrawalUser.getUserId()).isEqualTo(userId);
-        assertThat(withdrawalUser.getName()).isEqualTo(name);
-        assertThat(withdrawalUser.getSocialInfo().getSocialId()).isEqualTo(socialId);
-        assertThat(withdrawalUser.getSocialInfo().getSocialType()).isEqualTo(socialType);
-        assertThat(withdrawalUser.getUserCreatedAt()).isEqualTo(userCreatedAt);
+    private void assertWithdrawalUser(WithdrawalUser withdrawalUser, User user) {
+        assertThat(withdrawalUser.getUserId()).isEqualTo(user.getId());
+        assertThat(withdrawalUser.getName()).isEqualTo(user.getName());
+        assertThat(withdrawalUser.getSocialInfo()).isEqualTo(user.getSocialInfo());
+        assertThat(withdrawalUser.getUserCreatedAt()).isEqualTo(user.getCreatedAt());
     }
 
     private void assertUserInfo(User user, String socialId, UserSocialType type, String name) {
